app/assets/stylesheets/od4d.css
.home-left {
	width: 65%;
	margin: 0px;
	position: relative;
	display: inline-block;
}

.home-right {
	width: 32%;
	margin: 0px;
	position: relative;
	display: inline-block;
	vertical-align: top;
	margin-left: 20px;
}

.center-box {
	top: 138px;
	margin: 0px auto;
	max-width: 100%;
	background-color: #3c3c3c;
	padding: 0% 1% 1% 1%;
	overflow: auto;
	position: relative;
}

nav {
	position: relative;
	padding: 0px 0px 0px 0px;
	margin: 0px auto;
}

ol { 
    list-style-type: decimal; 
    list-style-position: inside; 
}

.logo {
	max-width: 100%;
	overflow: auto;
	position: relative;
	display: inline-block;
	z-index: 400;
	vertical-align: middle;
	margin-left: 15px;
}

.contribute {
	max-width: 100%;
	display: inline-block;
	vertical-align: middle;
	text-align: right;
	margin-top: 15px;
	padding: 15px;
}

.center-nenu{
	max-width: 100%;
	overflow: auto;
	position: relative;
	display: inline-block;
	vertical-align: middle;
	z-index: 400;
	margin-left: 30px;
}
.center-align	{
	max-width: 61em;
	margin: 0px auto;
	position: relative;
}

header {
	background-color: #444444;
    padding: 15px;

}

header a {
	font-size: 0.875em;
	color: #cccccc;
	font-weight: 500;
	font-family: 'Roboto Condensed', sans-serif;
}

header a:hover {
	color: #ffffff;
	text-decoration: none;
}

ul.header-menu li {
    display: inline-block;
	margin-right: 20px;
	margin-left: 0px;
	width: auto;
	text-align: left;
	list-style-type: none;

}

body {
	font-size: 1em;
	font-family: 'Exo 2', sans-serif;
	font-weight: 300;
	color: #2b2b2b;
	line-height: 1.5em;
	background-color: #ffffff;
	margin: 0px;
}
/*
header {
	background-color: #f6963f;
    padding: 15px;
}
*/


footer a {
	color: #ffffff;
	text-decoration: none;
}


.main {
	background-color: #ffffff;
	max-width: 61em;
	padding: 30px 15px 0px 15px;
	margin: 0px auto;
	position: relative;
	}

h1 {
	font-size: 1.7em;
	font-family: 'Exo 2', sans-serif;
	font-weight: 600;
	line-height: 1em;
	color: #da6235;
	margin: 20px 0px 25px 0px;
}

h2 {
	font-size: 1.4em;
	font-family: 'Exo 2', sans-serif;
	font-weight: 600;
	color: #da6235;
	line-height: 1.4em;
	margin: 25px 0px 0px 0px;
	padding: 0px;
}

h3 {
	font-size: 1.2em;
	font-family: 'Exo 2', sans-serif;
	font-weight: 600;
	color: #666666;
	line-height: 1.2em;
	padding: 0px;
	margin-top: 0px
}

h3 a {
  color: #666666;
}


p {
	font-size: 1em;
	font-family: 'Exo 2', sans-serif;
	font-weight: 300;
	color: #2b2b2b;
	margin: 15px 0px 0px 0px;
	line-height: 1.5em;
}

em {
	font-weight: 500;
}

.content {
	background-color: #ffffff;
}

article {
	padding-right: 25px;
}

a {
	color: #da6235;
	text-decoration: none;
}

a:hover {
	text-decoration: underline;
}


footer a:hover {
	color: #ab2f00;
	text-decoration: none;
}

ul {
   list-style-type: square;
   margin: 15px 0px 0px 25px;
   line-height: 1.5em;
}

footer {
	font-size: 16px;
	color: #ffffff;
	background-color: #da6235;
	text-align: left;
	height: 204px;
	margin-top: 24px;
}


p.footbar {
	float: left;
}

p.copyright {
	float: right;
	color:#c5c5c5;
	font-size: 14px;
}

@media screen and (max-width: 35em ) {
p.footbar {float: left;}
p.copyright {float: left;}

}

.inner-shadow
{
    height: 200px;
    width: 100%;
    -moz-box-shadow:    inset  0  8px 8px -8px #1b1b1b,
                        inset  0 -8px 8px -8px #1b1b1b;
    -webkit-box-shadow: inset  0  8px 8px -8px #1b1b1b,
                        inset  0 -8px 8px -8px #1b1b1b;
     box-shadow:        inset  0  8px 8px -8px #1b1b1b,
                        inset  0 -8px 8px -8px #1b1b1b;
}

.out-shadow {
	-moz-box-shadow:    0px 2px 8px -2px #1b1b1b;
  	-webkit-box-shadow: 0px 2px 8px -2px #1b1b1b;
  	box-shadow:         0px 2px 8px -2px #1b1b1b;
}

#Introduction {
  float: left;
}

#Objectives {
  width: 28%;
  float: left;
}

#Specific-Tasks {
  width: 69%;
  float: left;
  margin-left: 3%;
  margin-bottom: 50px;
}

@media screen and (max-width: 50em ) {
   #Objectives {position: relative; width: 100%; }
   #Specific-Tasks {float:left; width: 100%; margin: 0px 0px 20px 0px;}
}

.video-container {
    position: relative;
    padding-bottom: 56.25%; /* 16:9 */
    padding-top: 25px;
    height: 0;
}

.video-container iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

/*
START ARTICLE STYLES
*/
article.rss {
	border-bottom-style: solid;
    border-width: 1px;
	border-bottom-color: #cccccc;
	padding-bottom: 15px;
	margin: 0px 22px 22px 0px;
	padding-bottom: 15px;
}

p.author
{
	font-size: .875em;
	font-family: 'Exo 2', sans-serif;
	font-weight: 400;
	color: #666666;
	margin: 5px 0px 0px 0px;
	line-height: 1.3em;
}

p.category
{
	font-size: .875em;
	font-family: 'Exo 2', sans-serif;
	font-weight: 400;
	color: #666666;
	margin: 15px 0px 0px 0px;
}

p.summary {
	font-size: 1em;
	font-family: 'Exo 2', sans-serif;
	font-weight: 300;
	color: #2b2b2b;
	margin: 6px 0px 0px 0px;
	line-height: 1.5em;
}
p.rsshome {
	display: inline-block;
	font-size: .875em;
	font-family: 'Exo 2', sans-serif;
	font-weight: 400;
	color: #666666;
	margin: 0px 0px 0px 0px;
	
}

p.date
{
	font-size: .800em;
	font-family: 'Exo 2', sans-serif;
	font-weight: 400;
	color: #666666;
	margin: 3px 0px 0px 0px;
	line-height: 1.3em;
}

.feeds {
	margin-top: 0px;
	padding-top: 0px;
	width: 45%;
	position: relative;
	float: left;
}

.feeds-home {
	margin-top: 0px;
	padding-top: 0px;
	width: 100%;
	position: relative;
	float: left;
}

.button {
  font-size: .875em;
  font-family: 'Exo 2', sans-serif;
  font-weight: 300;
  padding: 4px 6px 4px 6px;
  margin: 10px 0 10px 0;
  background-color: #eeeeee;
  border: 1px solid #444444;
  text-decoration: none;
  position: relative;
}

button a {
  color: #333333;
}

.clear { clear: left; }

@media screen and (max-width: 62em ) {
   .feeds {position: relative; width: 92%;}

}

